Bug 248770 - WebDriver: [macOS] [Actions] [Key] Shift modifier not applying to typed text
Summary: WebDriver: [macOS] [Actions] [Key] Shift modifier not applying to typed text
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebDriver (show other bugs)
Version: WebKit Nightly Build
Hardware: All All
: P2 Normal
Assignee: Patrick Angle
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-12-05 12:45 PST by Patrick Angle
Modified: 2023-01-18 10:32 PST (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Angle 2022-12-05 12:45:51 PST
<rdar://100588610>
Comment 1 Patrick Angle 2022-12-06 08:56:55 PST
Pull request: https://github.com/WebKit/WebKit/pull/7208
Comment 2 EWS 2023-01-18 10:32:32 PST
Committed 259039@main (7bee9f5b488f): <https://commits.webkit.org/259039@main>

Reviewed commits have been landed. Closing PR #7208 and removing active labels.